--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -55,7 +55,7 @@ a:not(.social__link) {
 	position: relative;
 	transition: var(--transition);
 }
-.a:not(.social__link):before {
+a:not(.social__link):before {
 	content: '';
 	width: 0;
 	height: 100%;
@@ -65,10 +65,10 @@ a:not(.social__link) {
 	z-index: -1;
 	transition: var(--transition);
 }
-.a:not(.social__link):hover {
+a:not(.social__link):hover {
 	color: var(--background-color);
 }
-.a:not(.social__link):hover:before {
+a:not(.social__link):hover:before {
 	width: 100%;
 }
 .master {
